--- a/css/styles.css
+++ b/css/styles.css
@@ -119,9 +119,20 @@ padding: 2em;
         display: grid;
         grid-template-columns: 1fr repeat(2, minmax(auto, 25em)) 1fr;
     }
-    /* #showcase .bg-image{
-        background: url('/images/lg-castle.jpg');
-    } */
+    #showcase{
+        height: 90vh;
+    }
+    #showcase .bg-image{
+        position: absolute;
+        background: #333 url('/images/lg-castle.jpg');
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: center;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+        /* opacity: 0.4; */
+    }
     #section-a .content-text{
         columns: 1;
         column-gap: 2em;
@@ -144,5 +155,8 @@ padding: 2em;
     }
     #section-b li{
         /* width: 31%; */
+    }
+    #main-footer a{
+        color: red;
     }
 }
