--- a/css/styles.css
+++ b/css/styles.css
@@ -119,8 +119,8 @@ padding: 2em;
         display: grid;
         grid-template-columns: 1fr repeat(2, minmax(auto, 25em)) 1fr;
     }
-    #showcase{
-        height: 90vh;
+    /* #showcase{
+        height: 30vh;
     }
     #showcase .bg-image{
         position: absolute;
@@ -132,7 +132,7 @@ padding: 2em;
         height: 100%;
         z-index: -1;
         /* opacity: 0.4; */
-    }
+    } */
     #section-a .content-text{
         columns: 1;
         column-gap: 2em;
