--- a/css/styles.css
+++ b/css/styles.css
@@ -40,7 +40,7 @@ h1, h2, h3{
     color: #fff;
     text-align: center;
 }
-#showcase .bg-image{
+.bg-image{
     position: absolute;
     background: #333 url('/images/sm-castle.jpg');
     background-repeat: no-repeat;
@@ -48,7 +48,6 @@ h1, h2, h3{
     width: 100%;
     height: 100%;
     z-index: -1;
-    /* opacity: 0.4; */
 }
 #showcase .content-wrap h1{
     padding-top: 100px;
@@ -113,31 +112,21 @@ padding: 2em;
     text-decoration: none;
     color: #2690d4;
 }
+.desktop{
+    display: none;
+}
 /*media queries*/
 @media screen and (min-width: 768px){
     .grid{
         display: grid;
         grid-template-columns: 1fr repeat(2, minmax(auto, 25em)) 1fr;
     }
-    /* #showcase{
-        height: 30vh;
-    }
-    #showcase .bg-image{
-        position: absolute;
-        background: #333 url('/images/lg-castle.jpg');
-        background-repeat: no-repeat;
-        background-size: contain;
-        background-position: center;
-        width: 100%;
-        height: 100%;
-        z-index: -1;
-        /* opacity: 0.4; */
-    } */
+    
+    
     #section-a .content-text{
         columns: 1;
         column-gap: 2em;
     }
-    
     
     .content-wrap,
     #section-b ul{
@@ -153,9 +142,7 @@ padding: 2em;
         justify-content: space-around;
         
     }
-    #section-b li{
-        /* width: 31%; */
-    }
+    
     #main-footer a{
         color: red;
     }
